--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <img src="images/pizza.jpg" alt="Pizza with pepperoni and cheese." /> 
   </div>
   <div class="textContainer">
-    <h1>Pizza!</h1>
+    <h1>Malika's Pizza!</h1>
     <p>My Favorite Toppings: </p>
     <ul>
-      <li>Pepperoni</li>
-      <li>Mozzarella Cheese</li>
-      <li>Mushrooms</li>
+      <li>Chicken</li>
+      <li>Cheese</li>
+      <li>Gummy Worms</li>
     </ul>
   </div>
 </div>
