--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <img src="images/pizza.jpg" alt="Pizza with pepperoni and cheese." /> 
   </div>
   <div class="textContainer">
-    <h1>Malika's Pizza!</h1>
+    <h1>YOUSSEF Pizza Shop!</h1>
     <p>My Favorite Toppings: </p>
     <ul>
       <li>Chicken</li>
